gs/src/gxtext.h
@@ -95,6 +95,7 @@ rc_free_proc(rc_free_text_enum);
     /* knows the entire list of dynamically changing elements. */\
     rc_header rc;\
     gs_font *current_font; /* changes for composite fonts */\
+    bool is_pure_color; /* The text is painted with a pure color. */\
     gs_log2_scale_point log2_scale;	/* for oversampling */\
     cached_fm_pair *pair; /* corresponds to the current_font and CTM*(1<<log2_scale) */\
     uint index;			/* index within string */\
